--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,10 @@
 name: useful
 author: Tomas Kulich <tomas.kulich@vacuumapps.com>
-version: 1.0.1
+version: 1.0.2
 homepage: http://vacuumlabs.com
 description: common useful utilities
 dependencies:
-<<<<<<< HEAD
-  range:
-    git: git@github.com:tomaskulich/dart-range.git
-=======
   logging: any
-  range: '>=1.1.0 <2.0.0'
->>>>>>> master
+  quiver: any
 dev_dependencies:
   unittest: any
