--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ author: Tomas Kulich <tomas.kulich@vacuumapps.com>
 description: common useful utilities
 homepage: http://vacuumlabs.com
 dependencies:
+  collection: any
   logging: any
   quiver: any
 dev_dependencies:
